--- a/CSS/4_CSS_3D.html
+++ b/CSS/4_CSS_3D.html
@@ -13,27 +13,53 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            /* perspective: 500px; */
+            perspective: 500px;
         }
         .card{
+            position: relative;
             width: 100px;
             height: 150px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            margin: 1em;
+            transition: 1s;
+            /* transform: perspective(500px); */
+            transform : rotateY(0deg);
+            transform-style: preserve-3d;
+            transform-origin: left;
+        }
+        .Wolrd:hover .card{
+            transform : rotateY(-100deg);
+        }
+        .card_side{
             background-color: red;
             border-radius: 0.5em;
             font-size: 1.5rem;
-            margin: 1em;
-            transform: perspective(500px) rotateY(45deg);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position : absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+        }
+        .card_front{
+            z-index: 1;
+            background-color: white;
+        }
+        .card_back{
+            color: white;
+            background-color: black;
+            transform: rotateY(180deg);
         }
     </style>
 </head>
 <body>
     <div class="Wolrd">
-        <div class="card">CARD</div>
-        <div class="card">CARD</div>
-        <div class="card">CARD</div>
+        <div class="card">
+            <div class="card_side card_front">F</div>
+            <div class="card_side card_back">B</div>
+        </div>
     </div>
 </body>
 </html>
