--- a/Project/기념일 카운트/유니티시작일 카운트.html
+++ b/Project/기념일 카운트/유니티시작일 카운트.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>D-Day for love</title>
-	<link href="css/d-day.css" rel="stylesheet">
+	<link href="d-day.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
 		<div class="day1">
-			<h3>우리 만난지</h3>
+			<h3>aa</h3>
 			<p id="accent" class="accent"><span style="font-size:0.6em; font-style:italic">며칠?</span></p>
 			</div>
 			<div class="bar">기념일 계산</div>
@@ -25,12 +25,13 @@
 				<ul>
 						<li class="item-title">1년</li>
 						<li class="item-date" id="date365"></li>
-					</ul>      
+				</ul>      
 				<ul>
 							<li class="item-title">500일</li>
 							<li class="item-date" id="date500"></li>
-						</ul>      									     
+				</ul>      									     
 			</div>
 		</div>
+		<script src="유니티시작일.js"></script>
 	</body>
 	</html>
