--- a/Project/기념일 카운트/유니티시작일 카운트.html
+++ b/Project/기념일 카운트/유니티시작일 카운트.html
@@ -9,27 +9,27 @@
 <body>
 	<div class="container">
 		<div class="day1">
-			<h3>aa</h3>
-			<p id="accent" class="accent"><span style="font-size:0.6em; font-style:italic">며칠?</span></p>
+			<h3>유니티 시작한지</h3>
+			<p id="accent" class="accent"><span style="font-size:0.6em; font-style:italic"></span></p>
 			</div>
 			<div class="bar">기념일 계산</div>
 			<div class="day2">
 				<ul>
-					<li class="item-title">100일</li>         
-					<li class="item-date" id="date100"></li>
+					<li class="item-title">500일</li>         
+					<li class="item-date" id="date500"></li>
 				</ul>
 				<ul>
-					<li class="item-title">200일</li>
-					<li class="item-date" id="date200"></li>
+					<li class="item-title">1000일</li>
+					<li class="item-date" id="date1000"></li>
 				</ul>     
 				<ul>
-						<li class="item-title">1년</li>
-						<li class="item-date" id="date365"></li>
+					<li class="item-title">2000일</li>
+					<li class="item-date" id="date2000"></li>
 				</ul>      
-				<ul>
-							<li class="item-title">500일</li>
-							<li class="item-date" id="date500"></li>
-				</ul>      									     
+				<!-- <ul>
+					<li class="item-title">500일</li>
+					<li class="item-date" id="date500"></li>
+				</ul> -->
 			</div>
 		</div>
 		<script src="유니티시작일.js"></script>
